--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.33.1"
+clap = { version = "3.0.0-beta.1", features = ["derive"] }
 ptable = "0.3.2"
 log = "*"
 env_logger = "*"
