--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "stoichkit"
+description = "A stoichiometry toolkit"
 version = "0.1.0"
-authors = ["tmck"]
+authors = ["Tyler M. Kontra"]
 edition = "2018"
+license-file = "LICENSE"
+repository = "https://github.com/ttymck/stoichkit"
+categories = ["science", "command-line-utilities"]
+keywords = ["chemistry", "stoichiometry", "science"]
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
