--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stoichkit"
 description = "A stoichiometry toolkit"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Tyler M. Kontra"]
 edition = "2018"
 license-file = "LICENSE"
@@ -11,6 +11,15 @@ keywords = ["chemistry", "stoichiometry", "science"]
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+name = "stoichkit"
+path = "src/lib.rs"
+
+
+[[bin]]
+name = "stoichkit"
+path = "src/bin.rs"
 
 [dependencies]
 clap = { version = "3.0.0-beta.1", features = ["derive"] }
