--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,21 @@ path = "src/bin.rs"
 [dependencies]
 counter = "0.5.2"
 clap = { version = "3.0.0-beta.1", features = ["derive"] }
+
 nalgebra = "0.21.1"
+ndarray = "0.13"
+ndarray-linalg = { version = "0.12" }
+blas = "0.20"
+openblas-src = { version = "0.9", features = ["system"]}
+
 rug = "1.9.0"
 ptable = "0.3.2"
 num = "0.3.0"
 itertools = "0.9.0"
 log = "0.4.11"
 env_logger = "0.7.1"
+
+pyo3 = "0.11.1"
 
 [dev-dependencies]
 libmath = "0.2.1"
