--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ clap = { version = "3.0.0-beta.1", features = ["derive"] }
 
 nalgebra = "0.21.1"
 
-rug = "1.9.0"
+rug = { version = "1.9.0", features = ['integer', 'rational' ] }
 ptable = "0.3.2"
 num = "0.3.0"
 itertools = "0.9.0"
