--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stoichkit"
 description = "A stoichiometry toolkit"
-version = "0.2.8"
+version = "0.3.0"
 authors = ["Tyler M. Kontra"]
 edition = "2018"
 license-file = "LICENSE"
@@ -29,6 +29,9 @@ rug = { version = "1.9.0", features = ['integer', 'rational' ] }
 ptable = "0.3.2"
 num = "0.3.0"
 itertools = "0.9.0"
+
+serde_json = "1.0"
+serde = { version = "1.0", features = ['derive'] }
 
 log = "0.4.11"
 env_logger = "0.7.1"
