--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ clap = { version = "3.0.0-beta.1", features = ["derive"] }
 nalgebra = "0.21.1"
 
 rug = { version = "1.9.0", features = ['integer', 'rational' ] }
-ptable = "0.3.2"
+periodic-table-on-an-enum = "0.3.2"
 num = "0.3.0"
 itertools = "0.9.0"
 
