--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ itertools = "0.9.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ['derive'] }
 
+nom = "7.0.0"
+
 log = "0.4.11"
 env_logger = "0.7.1"
 
