--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ name = "stoichkit"
 path = "src/bin.rs"
 
 [dependencies]
-clap = { version = "3.0.0-beta.1", features = ["derive"] }
+clap = { version = "3.0.14", features = ["derive"] }
 
 nalgebra = "0.21.1"
 
