--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,9 @@ nalgebra = "0.21.1"
 
 rug = { version = "1.9.0", features = ['integer', 'rational' ] }
 periodic-table-on-an-enum = "0.3.2"
-num = "0.3.0"
+num = "~0.4"
+num-bigint = "~0.4"
+gmp-mpfr-sys = {version = "~1.4"}
 itertools = "0.9.0"
 
 serde_json = "1.0"
